Fix map covering menu

--- a/src/styles/UserButton.css
+++ b/src/styles/UserButton.css
@@ -19,6 +19,7 @@
   border-radius: 0 0 0 20px;
 
   position: absolute;
+  z-index: 401;
   right: 12px;
   top: 12px;
 
